services/nodeapp-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8085
  selector:
    app: nodeapp
