services/nodeapp-service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName
  externalName: test.oppwa.com
  ports:
  - port: 443
