services/nodeapp-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-headless
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 8085
  selector:
    app: nodeapp
