services/nodeapp-service-mutipleports.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeappservice
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8443
  selector:
    app: nodeapp
