services/nodeapp-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8085
    nodePort: 30123
  selector:
    app: nodeapp
