services/nodeapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeappservice
spec:
  ports:
  - port: 80
    targetPort: 8085
  selector:
    app: nodeapp
