services/nodeapp-service-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nodeapp
spec:
  tls:
  - hosts: 
    - nodeapp.example.com
    secretName: tls-secret
  rules:
  - host: nodeapp.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nodeapp-nodeport
          servicePort: 80
