services/nodeapp-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nodeapp
spec:
  rules:
  - host: nodeapp.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nodeapp-nodeport
          servicePort: 80
